tests/syntax/bad/testfile-parameters-1.c
#include <stdbool.h>
#include <stdlib.h>
#include <stdio.h>
void m(int x,) {}
